# LearnPyTest

./: .coverage  .coveragerc  .env  .flake8  .gitignore  conftest.py  cov.info  cov.json  cov.xml  pyproject.toml  pytest-learn.docx  pytest-learn.odt  pytest.ini  pytest_mocking_guide.md  read.txt
git-hook/: pre-commit.sh
other-resources/code-python-test-automation/chapter03/mypackage/: __init__.py  mymathlib.py
other-resources/code-python-test-automation/chapter03/test/: __init__.py  test_module01.py  test_module03.py
other-resources/code-python-test-automation/chapter04/mypackage/: mymathlib.py  mymathsimple.py
src/pytest-advanced-mocking-examples/mock_examples/: pg_query.py
src/pytest-advanced-mocking-examples/tests/: test_api.py  test_area.py  test_feature_flags.py  test_person.py  test_person_mock_class.py  test_pg_query.py
tests/basic/: test_001.py  test_003.py  test_fixtures--001.py
tests/basic/fixtures/: test_fixture.py  test_usefixtures.py
tests/loggers/: log_handler.py  test_log_handler.py
tests/mockings/: magic_mock_001.py  mocking_001.py  patching_001.py  patching_002.py  patching_003.py  test_mock_pytest--001.py  test_mock_pytest_1.py
tests/mockings/prod/: __init__.py  mathematics.py  production_db.py
tests/others/: ctx_mngr.py
tests/pytest_basics/asyncio_tests/: test_asyncio_calc.py  test_asyncio_cats.py  test_asyncio_fixture.py
tests/pytest_basics/fixture_params/: fixture_params.py
tests/pytest_basics/ordering/: test_orders.py
tests/pytest_basics/parallel-test/: test_seq.py
tests/pytest_basics/parallel-test/sequential_only/: test_seq.py  test_sequential.py
tests/pytest_basics/parameterized/: test_parametrized.py
